<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.passwordManagement.MainActivity">

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/ColorWhite" />

    <ImageView
        android:id="@+id/imgDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:src="@drawable/ic_tick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/ColorWhite" />

    <EditText
        android:id="@+id/txtService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@null"
        android:ellipsize="end"
        android:fontFamily="@font/manrope_bold"
        android:hint="@string/service"
        android:inputType="text"
        android:maxLines="1"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/ColorWhite"
        android:textColorHint="@color/ColorGray"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgBack" />

    <TextView
        android:id="@+id/DateTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:ellipsize="end"
        android:fontFamily="@font/manrope_bold"
        android:maxLines="1"
        android:paddingStart="@dimen/_10sdp"
        android:textColor="@color/ColorGray"
        android:textColorHint="@color/ColorGray"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtService" />

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/DateTime">

        <View
            android:id="@+id/colorView"
            android:layout_width="@dimen/_5sdp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_5sdp"
            android:background="@color/ColorBlue" />

        <EditText
            android:id="@+id/usernameEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:ellipsize="end"
            android:fontFamily="@font/manrope_regular"
            android:hint="@string/username_email"
            android:inputType="text"
            android:maxLines="1"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/ColorWhite"
            android:textColorHint="@color/ColorGray"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layoutImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/l1">
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutWebUrl"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/_10sdp"
        android:visibility="gone"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutImage"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/boxWebLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:fontFamily="@font/manrope_regular"
            android:hint="@string/web_url"
            android:inputType="textMultiLine"
            android:padding="@dimen/_10sdp"
            android:text="http://"
            android:textColor="@color/ColorWhite"
            android:textColorHint="@color/ColorGray"
            android:textSize="@dimen/_12ssp" />

        <ImageView
            android:id="@+id/imgUrlDelete"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:visibility="gone"
            android:src="@drawable/ic_baseline_cancel_24" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:fontFamily="@font/manrope_bold"
                android:background="@color/colorAccent"
                android:text="@string/cancel"
                android:textSize="@dimen/_12ssp"
                android:textAllCaps="false"
                android:textColor="@color/ColorWhite"
                android:id="@+id/btnCancel"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:fontFamily="@font/manrope_bold"
                android:background="@color/colorAccent"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:textSize="@dimen/_12ssp"
                android:layout_marginStart="@dimen/_5sdp"
                android:textColor="@color/ColorWhite"
                android:id="@+id/btnOk"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tvWebLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:ellipsize="end"
        android:visibility="gone"
        android:fontFamily="@font/manrope_bold"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/ColorGray"
        android:textColorHint="@color/ColorGray"
        android:textSize="@dimen/_12ssp"
        android:autoLink="web"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutWebUrl" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@null"
        android:fontFamily="@font/manrope_regular"
        android:hint="@string/enter_password"
        android:inputType="text"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/ColorWhite"
        android:textColorHint="@color/ColorGray"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWebLink" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imgSetting"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_settings_24" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>